# rsip-caller

./: .gitignore  AGENTS.md  CLAUDE_CODE.md  Cargo.toml  INTEGRATION_SUMMARY.md  Makefile  OUTBOUND_PROXY_SUPPORT.md  README.md  THISERROR_IMPLEMENTATION.md  test.sh  test_echo.sh  test_echo_final.sh  test_media_error.rs  test_rtp_player.sh
docs/: PROTOCOL_GUIDE.md  rust_method_override.md
src/: config.rs  error.rs  lib.rs  main.rs  rtp.rs  rtp_play.rs  sip_client.rs  sip_dialog.rs  sip_registration.rs  sip_transport.rs  utils.rs
src/registration/: factory.rs  mod.rs  outbound.rs  standard.rs  traits.rs
