[package]
name = "sip-caller"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true  # 链接时优化
codegen-units = 1

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
rsipstack = "0.4.0"
rsip = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.9.2"
tokio-util = "0.7"
get_if_addrs = "0.5"
rtp-rs = "0.6"

[dev-dependencies]
