[package]
name = "sip-caller"
version = "0.1.0"
edition = "2021"
description = "A Rust SIP client library with RTP media streaming support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/sip-caller"
authors = ["Your Name <your.email@example.com>"]
keywords = ["sip", "voip", "rtp", "webrtc", "media"]
categories = ["multimedia", "network-programming"]

[lib]
name = "sip_caller"
path = "src/lib.rs"

[[bin]]
name = "sip-caller"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true  # 链接时优化
codegen-units = 1

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
rsip = "0.4.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "std"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
rand = "0.10.0-rc.8"
tokio-util = "0.7.18"
get_if_addrs = "0.5.3"
rtp-rs = "0.6.0"
rsipstack = "0.4.3"
rustrtc = "0.3.13"
async-trait = "0.1"
webrtc = "0.14.0"
thiserror = "1"
regex = "1.11.0"
futures-util = "0.3.30"

[dev-dependencies]
